--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,13 @@
 {
+    "editor.fontSize": 16,
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        ".vs":true,
+        ".vscode":true,
+        "node_modules":false
+    }
 }
