--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "my first website simplist",
   "scripts": {
-    "dev": "webpack --mode development --watch --config config/webpack.config.js",
-    "build": "webpack --mode production --config config/webpack.config.js"
+    "dev": "webpack-dev-server --mode development --watch --config config/webpack.config.js",
+    "build": "webpack-dev-server --mode production --config config/webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,12 +19,20 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
+    "postcss": "^6.0.23",
     "postcss-loader": "^2.1.6",
     "sass-loader": "^7.0.3",
+    "script-loader": "^0.7.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.1",
+    "webpack-dev-server": "^3.1.4",
     "webpack-md5-hash": "0.0.6"
+  },
+  "dependencies": {
+    "foundation-sites": "^6.5.0-rc.2",
+    "jquery": "^3.3.1",
+    "motion-ui": "^2.0.3",
+    "what-input": "^5.1.0"
   }
 }
