--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "**/.DS_Store": true,
         ".vs":true,
         ".vscode":true,
-        "node_modules":false
+        "node_modules":true,
+        ".**":true,
+        "**-lock.**":true
     }
 }
