--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "my first website simplist",
   "scripts": {
-    "dev": "webpack-dev-server --mode development --watch --config config/webpack.config.js",
-    "build": "webpack-dev-server --mode production --config config/webpack.config.js"
+    "dev": "webpack-dev-server --mode development --config config/webpack.config.js",
+    "build": "webpack --mode production --config config/webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.3.1",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
     "postcss": "^6.0.23",
@@ -25,6 +26,8 @@
     "sass-loader": "^7.0.3",
     "script-loader": "^0.7.2",
     "style-loader": "^0.21.0",
+    "svg-url-loader": "^2.3.2",
+    "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.4",
